[Issue]:support jitpack, change settings.gradle.kts to settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,5 @@
 pluginManagement {
     repositories {
-//        google {
-//            content {
-//                includeGroupByRegex("com\\.android.*")
-//                includeGroupByRegex("com\\.google.*")
-//                includeGroupByRegex("androidx.*")
-//            }
-//        }
         google()
         mavenCentral()
         gradlePluginPortal()
@@ -17,9 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
-
 rootProject.name = "CLCameraXConverter"
-include(":app")
-include(":converter")
+include ':app'
+include ':converter'
